--- a/sites/help/content/themes/default/languages/zh_TW/default.po
+++ b/sites/help/content/themes/default/languages/zh_TW/default.po
@@ -8,41 +8,40 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2019-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2019-03-21 10:59+0800\n"
 "Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
+"X-Generator: Poedit 2.2\n"
+"Last-Translator: \n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: zh_TW\n"
 
 #: extras/controller/article_controller.php:96
 msgid "帮助中心"
-msgstr ""
+msgstr "幫助中心"
 
 #: extras/controller/article_controller.php:147
 #: extras/controller/article_controller.php:288
 msgid "关于我们"
-msgstr ""
+msgstr "關於我們"
 
 #: extras/controller/article_controller.php:200
 #: extras/controller/article_controller.php:247
 msgid "商家公告"
-msgstr ""
+msgstr "商家公告"
 
-#. #-#-#-#-#  default.pot (通用帮助中心模板 1.29.0)  #-#-#-#-#
 #. Template Name of the plugin/theme
-#. #-#-#-#-#  default.pot (通用帮助中心模板 1.29.0)  #-#-#-#-#
 #. Description of the plugin/theme
 msgid "通用帮助中心模板"
-msgstr ""
+msgstr "通用幫助中心模板"
 
-#. #-#-#-#-#  default.pot (通用帮助中心模板 1.29.0)  #-#-#-#-#
 #. Template URI of the plugin/theme
-#. #-#-#-#-#  default.pot (通用帮助中心模板 1.29.0)  #-#-#-#-#
 #. Author URI of the plugin/theme
 msgid "https://ecjia.com/"
-msgstr ""
+msgstr "https://ecjia.com/"
 
 #. Author of the plugin/theme
 msgid "ECJia Team"
-msgstr ""
+msgstr "ECJia Team"
 
 #: sites/help/content/themes/default/article_detail.dwt.php:16
 #: sites/help/content/themes/default/article_detail.dwt.php:17
@@ -56,40 +55,40 @@ msgstr ""
 #: sites/help/content/themes/default/article_notice.dwt.php:21
 #: sites/help/content/themes/default/article_notice.dwt.php:36
 msgid "商城公告"
-msgstr ""
+msgstr "商城公告"
 
 #: sites/help/content/themes/default/article_info.dwt.php:29
 #: sites/help/content/themes/default/article_friendlink.dwt.php:29
 #: sites/help/content/themes/default/article_friendlink.dwt.php:41
 #: sites/help/content/themes/default/article_friendlink.dwt.php:44
 msgid "友情链接"
-msgstr ""
+msgstr "友情鏈接"
 
 #: sites/help/content/themes/default/article_info.dwt.php:57
 #: sites/help/content/themes/default/article_help.dwt.php:54
 msgid "暂无内容"
-msgstr ""
+msgstr "暫無內容"
 
 #: sites/help/content/themes/default/library/page_header.lbi.php:4
 msgid "Hi，欢迎来到"
-msgstr ""
+msgstr "Hi，歡迎來到"
 
 #: sites/help/content/themes/default/library/page_header.lbi.php:10
 msgid "会员中心"
-msgstr ""
+msgstr "會員中心"
 
 #: sites/help/content/themes/default/library/page_header.lbi.php:11
 msgid "我的订单"
-msgstr ""
+msgstr "我的訂單"
 
 #: sites/help/content/themes/default/library/page_footer.lbi.php:30
 msgid "版权所有"
-msgstr ""
+msgstr "版權所有"
 
 #: sites/help/content/themes/default/article_notice.dwt.php:38
 msgid "热点公告"
-msgstr ""
+msgstr "熱點公告"
 
 #: sites/help/content/themes/default/article_notice.dwt.php:44
 msgid "暂无商城公告"
-msgstr ""
+msgstr "暫無商城公告"
