更新安装器应用模块

--- a/content/apps/installer/languages/en_US/installer.po
+++ b/content/apps/installer/languages/en_US/installer.po
@@ -290,9 +290,9 @@ msgid ""
 "                                <h4>许可及协议</h4>\n"
 "                                <p>请您在安装前仔细阅读本协议内容。<br>\n"
 "                                    感谢您选择上海商创网络科技有限公司（模板"
-"堂）独立研发ECJia到家O2O商城系统，即ECJia到家。在我们的不断努力中，为用户提供"
+"堂）独立研发ECJia到家新零售商城系统，即ECJia到家。在我们的不断努力中，为用户提供"
 "全新，功能强大，使用便捷的O2O产品。<br>\n"
-"                                    模板堂是ECJia到家O2O商城系统的开发商，"
+"                                    模板堂是ECJia到家新零售商城系统的开发商，"
 "ECJia官方网站为 <a href=\"https://ecjia.com/\" target=\"_blank\">https://"
 "ecjia.com/</a>。<br>\n"
 "                                    本授权协议适用且仅适用于ECJia到家V 1.3版"
@@ -750,7 +750,7 @@ msgstr "Start the next step: configure the system"
 #~ msgstr "Please read this agreement carefully before installation."
 
 #~ msgid ""
-#~ "感谢您选择上海商创网络科技有限公司（模板堂）独立研发ECJia到家O2O商城系统，"
+#~ "感谢您选择上海商创网络科技有限公司（模板堂）独立研发ECJia到家新零售商城系统，"
 #~ "即ECJia到家。在我们的不断努力中，为用户提供全新，功能强大，使用便捷的O2O产"
 #~ "品。"
 #~ msgstr ""
@@ -760,7 +760,7 @@ msgstr "Start the next step: configure the system"
 #~ "provide users with new, powerful and easy-to-use O2O products."
 
 #~ msgid ""
-#~ "模板堂是ECJia到家O2O商城系统的开发商，ECJia官方网站为 <a href=\"https://"
+#~ "模板堂是ECJia到家新零售商城系统的开发商，ECJia官方网站为 <a href=\"https://"
 #~ "ecjia.com/\" target=\"_blank\">https://ecjia.com/</a>。"
 #~ msgstr ""
 #~ "Template Hall is the developer of ECJia's O2O mall system. The official "
