--- a/content/apps/installer/languages/zh_CN/installer.pot
+++ b/content/apps/installer/languages/zh_CN/installer.pot
@@ -281,9 +281,9 @@ msgid ""
 "                        <h4>许可及协议</h4>\n"
 "                        <p>请您在安装前仔细阅读本协议内容。<br>\n"
 "                            感谢您选择上海商创网络科技有限公司（模板堂）独立"
-"研发ECJia到家O2O商城系统，即ECJia到家。在我们的不断努力中，为用户提供全新，功"
+"研发ECJia到家新零售商城系统，即ECJia到家。在我们的不断努力中，为用户提供全新，功"
 "能强大，使用便捷的O2O产品。<br>\n"
-"                            模板堂是ECJia到家O2O商城系统的开发商，ECJia官方网"
+"                            模板堂是ECJia到家新零售商城系统的开发商，ECJia官方网"
 "站为 <a href=\"https://ecjia.com/\" target=\"_blank\">https://ecjia.com/</"
 "a>。<br>\n"
 "                            本授权协议适用且仅适用于ECJia到家V 1.3版本以及后"
