--- a/content/apps/orders/languages/zh_TW/orders.po
+++ b/content/apps/orders/languages/zh_TW/orders.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: Ecjia App orders 1.28.0\n"
 "Report-Msgid-Bugs-To: https://make.ecjia.com/polyglots/\n"
 "POT-Creation-Date: 2019-04-12 13:52+0800\n"
-"PO-Revision-Date: 2019-04-12 13:53+0800\n"
+"PO-Revision-Date: 2019-06-27 11:03+0800\n"
 "Last-Translator: \n"
 "Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7\n"
+"X-Generator: Poedit 2.2\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 #: admin.php:105 admin.php:260 admin.php:693 admin.php:736
@@ -4216,7 +4216,7 @@ msgstr "總金額數"
 #: content/apps/orders/templates/admin/order_stats.dwt.php:170
 #: content/apps/orders/templates/merchant/order_stats.dwt.php:172
 msgid "订单概况"
-msgstr "订单概况"
+msgstr "訂單概況"
 
 #: content/apps/orders/templates/admin/order_stats.dwt.php:173
 #: content/apps/orders/templates/merchant/order_stats.dwt.php:175
